<resources>
    <string name="app_name">SettingApp</string>
    <string name="app_configuration">Configuración</string>
    <string name="dark_mode">Modo Oscuro</string>
    <string name="dark_mode_description">Activar modo oscuro en el dispositivo</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_description">Activar bluetooth en el dispositivo</string>
    <string name="volumen">Volumen</string>
    <string name="vibration">Vibrar en la Llamadas</string>
</resources>